--- a/EjerciciosJava/1. Variables/1.EjerciciosVariables/nbproject/project.properties
+++ b/EjerciciosJava/1. Variables/1.EjerciciosVariables/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pkg1.ejerciciosvariables.EjerciciosVariables
+main.class=pkg1.ejerciciosvariables.Ejercicio1Variables
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
