--- a/EjerciciosJava/2. Condicionales/2.EjerciciosCondicionales/nbproject/project.properties
+++ b/EjerciciosJava/2. Condicionales/2.EjerciciosCondicionales/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pkg2.ejercicioscondicionales.EjerciciosCondicionales
+main.class=pkg2.ejercicioscondicionales.Ejercicio1Condicionales
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
