--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /EjerciciosJava/1. Variables/1.EjerciciosVariables/build/
 /EjerciciosJava/2. Condicionales/2.EjerciciosCondicionales/build/
+/EjerciciosJava/3. Ciclos/3.EjericiciosCiclos/build/
