--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /EjerciciosJava/1. Variables/1.EjerciciosVariables/build/
 /EjerciciosJava/2. Condicionales/2.EjerciciosCondicionales/build/
 /EjerciciosJava/3. Ciclos/3.EjericiciosCiclos/build/
+/EjerciciosJava/4. Arreglos/4.EjerciciosArreglos/build/
