--- a/EjerciciosJava/4. Arreglos/4.EjerciciosArreglos/nbproject/project.properties
+++ b/EjerciciosJava/4. Arreglos/4.EjerciciosArreglos/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pkg4.ejerciciosarreglos.EjerciciosArreglos
+main.class=pkg4.ejerciciosarreglos.Ejercicio1Arreglos
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
