--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 /EjerciciosJava/2. Condicionales/2.EjerciciosCondicionales/build/
 /EjerciciosJava/3. Ciclos/3.EjericiciosCiclos/build/
 /EjerciciosJava/4. Arreglos/4.EjerciciosArreglos/build/
+/Retos/Reto 1/Reto1Variante1/nbproject/private/
+/Retos/Reto 1/Reto1Variante2/nbproject/private/
+/Retos/Reto 1/Reto1Variante3/nbproject/private/
