Resolucion Reto1Variante1
se soluciono en su totaliad la variante, ademas a eso se generó un codigo de prueba

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Retos/Reto 1/Reto1Variante1/nbproject/private/
 /Retos/Reto 1/Reto1Variante2/nbproject/private/
 /Retos/Reto 1/Reto1Variante3/nbproject/private/
+/Retos/Reto 1/Reto1Variante1/build/
