Solucion Reto1Variante2
se soluciono en su totaliad la variante, ademas a eso se generó un codigo de prueba

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /Retos/Reto 1/Reto1Variante2/nbproject/private/
 /Retos/Reto 1/Reto1Variante3/nbproject/private/
 /Retos/Reto 1/Reto1Variante1/build/
+/Retos/Reto 1/Polimorfismo/nbproject/private/
+/Retos/Reto 1/Polimorfismo/build/
+/Retos/Reto 1/Abstracto/nbproject/private/
+/Retos/Reto 1/Abstracto/build/
+/Retos/Reto 1/Reto1Variante2/build/
