Solución Reto1Variante3
se soluciono en su totaliad la variante, ademas a eso se generó un codigo de prueba

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Retos/Reto 1/Abstracto/nbproject/private/
 /Retos/Reto 1/Abstracto/build/
 /Retos/Reto 1/Reto1Variante2/build/
+/Retos/Reto 1/Reto1Variante3/build/
