--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 /Retos/Reto 1/Abstracto/build/
 /Retos/Reto 1/Reto1Variante2/build/
 /Retos/Reto 1/Reto1Variante3/build/
+/Retos/Reto 1/Interfaces/nbproject/private/
+/Retos/Reto 1/Prueba/nbproject/private/
+/EjerciciosJava/5.Ejercicios_02/nbproject/private/
+/EjerciciosJava/5.Ejercicios_02/build/
