Creación de las Carpetas para el Reto 2

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,9 @@
 /Retos/Reto 1/Prueba/nbproject/private/
 /EjerciciosJava/5.Ejercicios_02/nbproject/private/
 /EjerciciosJava/5.Ejercicios_02/build/
+/EjerciciosJava/EjerciciosInicioClases/nbproject/private/
+/EjerciciosJava/IntergasesEjercicios/nbproject/private/
+/EjerciciosJava/IntergasesEjercicios/build/
+/Retos/Reto 2/Reto2Variante1/nbproject/private/
+/Retos/Reto 2/Reto2Variante2/nbproject/private/
+/Retos/Reto 2/Reto2Variante3/nbproject/private/
