--- a/Retos/Reto 2/Reto2Variante3/nbproject/project.properties
+++ b/Retos/Reto 2/Reto2Variante3/nbproject/project.properties
@@ -24,7 +24,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/5.Ejercicios_02.jar
+dist.jar=${dist.dir}/Reto2Variante3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pkg5.ejercicios_02.Ejercicio1Ciclos
+main.class=reto2variante3.Reto2Variante3
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
