Solucion Reto2Variante1
se soluciono en su totaliad la variante, ademas a eso se generó un codigo de prueba

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@
 /Retos/Reto 2/Reto2Variante1/nbproject/private/
 /Retos/Reto 2/Reto2Variante2/nbproject/private/
 /Retos/Reto 2/Reto2Variante3/nbproject/private/
+/Retos/Reto 2/Reto2Variante1/build/
