Solucion de los Retos 3 y 4 Variante 1

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,6 @@
 /Retos/Reto 2/Reto2Variante2/nbproject/private/
 /Retos/Reto 2/Reto2Variante3/nbproject/private/
 /Retos/Reto 2/Reto2Variante1/build/
+/Retos/Reto 3/Reto3Variante1/Reto3Variante1/nbproject/private/
+/Retos/Reto 4/Reto4Variante1/Reto4Variante1/nbproject/private/
+/Retos/Reto 4/Reto4Variante1/Ejemplo/nbproject/private/
